--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   
   
 
@@ -43,19 +44,6 @@
 
 <meta name="description" content="Site de la Meridian Corp.">
 <link rel="canonical" href="https://meridian-corp.firebaseapp.com/404.html">
-<meta property="og:locale" content="en_US">
-<meta property="og:type" content="website">
-<meta property="og:title" content="404 Page not found | Meridian Corp">
-<meta property="og:description" content="Site de la Meridian Corp.">
-<meta property="og:url" content="https://meridian-corp.firebaseapp.com/404.html">
-
-
-
-  <meta name="og:image" content="https://meridian-corp.firebaseapp.com/images/default.png"/>
-
-
-
-
 
 
   <meta name="twitter:site" content="corp_meridian">
@@ -323,5 +311,16 @@
 
 
   
-</body>
+<script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
