--- a/public/404.html
+++ b/public/404.html
@@ -44,7 +44,7 @@
 
 <meta name="description" content="Site de la Meridian Corp.">
 <link rel="canonical" href="https://meridian-corp.firebaseapp.com/404.html">
-<meta property="og:locale" content="en_US">
+<meta property="og:locale" content="fr_FR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="404 Page not found | Meridian Corp">
 <meta property="og:description" content="Site de la Meridian Corp.">
