--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
 <meta name="description" content="Site de la Meridian Corp.">
 <link rel="canonical" href="https://meridian-corp.firebaseapp.com/">
-<meta property="og:locale" content="en_US">
+<meta property="og:locale" content="fr_FR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Meridian Corp">
 <meta property="og:description" content="Site de la Meridian Corp.">
