--- a/public/404.html
+++ b/public/404.html
@@ -205,7 +205,7 @@
           </li>
           
           <li class="menu-item">
-            <a href="/posjdbts/" class="menu-link">Le lore</a>
+            <a href="/jdb/" class="menu-link">Le lore</a>
           </li>
           
           <li class="menu-item">
